Checkout function git repo automatically if cloud9 pod found

--- a/admin/src/main/resources/templates/config.yaml
+++ b/admin/src/main/resources/templates/config.yaml
@@ -1,1 +1,7 @@
 command: "./script.sh"
+# bug in jgit which does not preserve executable flag :(
+# so config lists files to be made executable after checkout
+executables:
+  - "script.sh"
+  - "hello.js"
+  - "hello.py"
