--- a/k8s/all.yaml
+++ b/k8s/all.yaml
@@ -149,4 +149,95 @@ spec:
   selector:
     app: gogs
     component: gogs
-
+---
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  name: cloud9
+  namespace: klusterfuck
+  labels:
+    component: cloud9
+spec:
+  replicas: 1
+  selector:
+    app: cloud9
+    component: cloud9
+  template:
+    metadata:
+      labels:
+        app: cloud9
+        component: cloud9
+    spec:
+      containers:
+      - name: cloud9
+        image: kdelfour/cloud9-docker
+        ports:
+          - containerPort: 80
+        resources:
+          limits:
+            cpu: 200m
+            memory: 200Mi
+          requests:
+            cpu: 200m
+            memory: 200Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cloud9
+  namespace: klusterfuck
+  labels:
+    app: cloud9
+    component: cloud9
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: cloud9
+    component: cloud9
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: klusterfuck
+  namespace: klusterfuck
+spec:
+  rules:
+  - host: klusterfuck.kube.local
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: klusterfuck
+          servicePort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: gogs
+  namespace: klusterfuck
+spec:
+  rules:
+  - host: gogs.kube.local
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: gogs
+          servicePort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: cloud9
+  namespace: klusterfuck
+spec:
+  rules:
+  - host: cloud9.kube.local
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: cloud9
+          servicePort: 80
