--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -85,25 +85,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.n-k</groupId>
-            <artifactId>java-gogs-client</artifactId>
-            <version>3ae19fa</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.24.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>4.0.6</version>
         </dependency>
 
         <!-- test deps -->
