--- a/connector-http/pom.xml
+++ b/connector-http/pom.xml
@@ -96,7 +96,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <firstName>nipun/klusterfuck-connector-http:${image.version}</firstName>
+                            <name>nipun/klusterfuck-connector-http:${image.version}</name>
                             <build>
                                 <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
