--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threetenbp</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
         </dependency>
@@ -320,7 +325,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <firstName>nipun/klusterfuck-admin:${image.version}</firstName>
+                            <name>nipun/klusterfuck-admin:${image.version}</name>
                             <build>
                                 <from>openjdk:8u131-jre-alpine</from>
                                 <cleanup>remove</cleanup>
